media: ti: j721e-csi2rx: fix list_del corruption (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10508,6 +10508,7 @@
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
+	patches.suse/media-ti-j721e-csi2rx-fix-list_del-corruption.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
