Revert "leds: trigger: netdev: Configure LED blink interval for HW offload" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10485,6 +10485,7 @@
 	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
 	patches.suse/leds-flash-leds-qcom-flash-Fix-registry-access-after.patch
+	patches.suse/Revert-leds-trigger-netdev-Configure-LED-blink-inter.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
