crypto: img-hash - Fix dma_unmap_sg() nents value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10478,6 +10478,7 @@
 	patches.suse/crypto-ccp-Fix-crash-when-rebind-ccp-device-for-ccp..patch
 	patches.suse/hwrng-mtk-handle-devm_pm_runtime_enable-errors.patch
 	patches.suse/crypto-keembay-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/crypto-img-hash-Fix-dma_unmap_sg-nents-value.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
