--- a/series.conf
+++ b/series.conf
@@ -10479,6 +10479,7 @@
 	patches.suse/hwrng-mtk-handle-devm_pm_runtime_enable-errors.patch
 	patches.suse/crypto-keembay-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-img-hash-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/crypto-qat-disable-ZUC-256-capability-for-QAT-GEN5.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
