crypto: caam - Prevent crash on suspend with iMX8QM / iMX8ULP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10472,6 +10472,7 @@
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
+	patches.suse/crypto-caam-Prevent-crash-on-suspend-with-iMX8QM-iMX.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
