crypto: ccp - Fix crash when rebind ccp device for ccp.ko (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10475,6 +10475,7 @@
 	patches.suse/crypto-caam-Prevent-crash-on-suspend-with-iMX8QM-iMX.patch
 	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 	patches.suse/crypto-inside-secure-Fix-dma_unmap_sg-nents-value.patch
+	patches.suse/crypto-ccp-Fix-crash-when-rebind-ccp-device-for-ccp..patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
