crypto: qat - use unmanaged allocation for dc_data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10467,6 +10467,7 @@
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx10-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/crypto-sun8i-ce-fix-nents-passed-to-dma_unmap_sg.patch
+	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
