--- a/series.conf
+++ b/series.conf
@@ -10476,6 +10476,7 @@
 	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 	patches.suse/crypto-inside-secure-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-ccp-Fix-crash-when-rebind-ccp-device-for-ccp..patch
+	patches.suse/hwrng-mtk-handle-devm_pm_runtime_enable-errors.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
