mtd: spi-nor: Fix spi_nor_try_unlock_all() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10528,6 +10528,7 @@
 	patches.suse/clk-qcom-gcc-ipq8074-fix-broken-freq-table-for-nss_p.patch
 	patches.suse/mtd-fix-possible-integer-overflow-in-erase_xfer.patch
 	patches.suse/mtd-spi-nor-spansion-Fixup-params-set_4byte_addr_mod.patch
+	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
