crypto: inside-secure - Fix `dma_unmap_sg()` nents value (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10474,6 +10474,7 @@
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
 	patches.suse/crypto-caam-Prevent-crash-on-suspend-with-iMX8QM-iMX.patch
 	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
+	patches.suse/crypto-inside-secure-Fix-dma_unmap_sg-nents-value.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
