--- a/series.conf
+++ b/series.conf
@@ -10499,6 +10499,7 @@
 	patches.suse/media-pisp_be-Fix-pm_runtime-underrun-in-probe.patch
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
+	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
