media: venus: venc: Clamp param smaller than 1fps and bigger than 240 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10498,6 +10498,7 @@
 	patches.suse/media-ivsc-Fix-crash-at-shutdown-due-to-missing-mei_.patch
 	patches.suse/media-pisp_be-Fix-pm_runtime-underrun-in-probe.patch
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
+	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
