--- a/series.conf
+++ b/series.conf
@@ -10514,6 +10514,7 @@
 	patches.suse/media-v4l2-Add-support-for-NV12M-tiled-variants-to-v.patch
 	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
 	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
+	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
