--- a/series.conf
+++ b/series.conf
@@ -10511,6 +10511,7 @@
 	patches.suse/media-ti-j721e-csi2rx-fix-list_del-corruption.patch
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
+	patches.suse/media-v4l2-Add-support-for-NV12M-tiled-variants-to-v.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
