--- a/series.conf
+++ b/series.conf
@@ -10534,6 +10534,7 @@
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
+	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
