leds: flash: leds-qcom-flash: Fix registry access after re-bind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10484,6 +10484,7 @@
 	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
 	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
+	patches.suse/leds-flash-leds-qcom-flash-Fix-registry-access-after.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
