--- a/series.conf
+++ b/series.conf
@@ -10533,6 +10533,7 @@
 	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
+	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
