mtd: rawnand: renesas: Add missing check after DMA map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10529,6 +10529,7 @@
 	patches.suse/mtd-fix-possible-integer-overflow-in-erase_xfer.patch
 	patches.suse/mtd-spi-nor-spansion-Fixup-params-set_4byte_addr_mod.patch
 	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
+	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
