--- a/series.conf
+++ b/series.conf
@@ -10493,6 +10493,7 @@
 	patches.suse/media-verisilicon-Fix-AV1-decoder-clock-frequency.patch
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
 	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
+	patches.suse/media-mt9m114-Fix-deadlock-in-get_frame_interval-set.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
