clk: thead: th1520-ap: Correctly refer the parent of osc_12m (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10522,6 +10522,7 @@
 	patches.suse/clk-samsung-gs101-fix-alternate-mout_hsi0_usb20_ref-.patch
 	patches.suse/clk-samsung-exynos850-fix-a-comment.patch
 	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
+	patches.suse/clk-thead-th1520-ap-Correctly-refer-the-parent-of-os.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
