media: v4l2-ctrls: Don't reset handler's error in v4l2_ctrl_handler_free() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10494,6 +10494,7 @@
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
 	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 	patches.suse/media-mt9m114-Fix-deadlock-in-get_frame_interval-set.patch
+	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
