crypto: qat - flush misc workqueue during device shutdown (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10480,6 +10480,7 @@
 	patches.suse/crypto-keembay-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-img-hash-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-qat-disable-ZUC-256-capability-for-QAT-GEN5.patch
+	patches.suse/crypto-qat-flush-misc-workqueue-during-device-shutdo.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
