media: qcom: camss: cleanup media device allocated resource on error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10504,6 +10504,7 @@
 	patches.suse/media-venus-Fix-OOB-read-due-to-missing-payload-boun.patch
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 	patches.suse/media-venus-Fix-MSM8998-frequency-table.patch
+	patches.suse/media-qcom-camss-cleanup-media-device-allocated-reso.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
