media: pisp_be: Fix pm_runtime underrun in probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10496,6 +10496,7 @@
 	patches.suse/media-mt9m114-Fix-deadlock-in-get_frame_interval-set.patch
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
 	patches.suse/media-ivsc-Fix-crash-at-shutdown-due-to-missing-mei_.patch
+	patches.suse/media-pisp_be-Fix-pm_runtime-underrun-in-probe.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
