clk: renesas: rzv2h: Fix missing CLK_SET_RATE_PARENT flag for ddiv clocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10517,6 +10517,7 @@
 	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
 	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
 	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
+	patches.suse/clk-renesas-rzv2h-Fix-missing-CLK_SET_RATE_PARENT-fl.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
