--- a/series.conf
+++ b/series.conf
@@ -10473,6 +10473,7 @@
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
 	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
 	patches.suse/crypto-caam-Prevent-crash-on-suspend-with-iMX8QM-iMX.patch
+	patches.suse/crypto-ccp-Fix-locking-on-alloc-failure-handling.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
