media: venus: hfi: explicitly release IRQ during teardown (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10502,6 +10502,7 @@
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 	patches.suse/media-venus-Fix-OOB-read-due-to-missing-payload-boun.patch
+	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
