media: uvcvideo: Do not mark valid metadata as invalid (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10510,6 +10510,7 @@
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 	patches.suse/media-ti-j721e-csi2rx-fix-list_del-corruption.patch
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
+	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
