--- a/series.conf
+++ b/series.conf
@@ -10500,6 +10500,7 @@
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
+	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
