crypto: qat - fix DMA direction for compression on GEN2 devices (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10481,6 +10481,7 @@
 	patches.suse/crypto-img-hash-Fix-dma_unmap_sg-nents-value.patch
 	patches.suse/crypto-qat-disable-ZUC-256-capability-for-QAT-GEN5.patch
 	patches.suse/crypto-qat-flush-misc-workqueue-during-device-shutdo.patch
+	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
