media: rainshadow-cec: fix TOCTOU race condition in rain_interrupt() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10489,6 +10489,7 @@
 	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
 	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
+	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
