--- a/series.conf
+++ b/series.conf
@@ -10519,6 +10519,7 @@
 	patches.suse/clk-clk-axi-clkgen-fix-fpfd_max-frequency-for-zynq.patch
 	patches.suse/clk-renesas-rzv2h-Fix-missing-CLK_SET_RATE_PARENT-fl.patch
 	patches.suse/clk-samsung-gs101-fix-CLK_DOUT_CMU_G3D_BUSD.patch
+	patches.suse/clk-samsung-gs101-fix-alternate-mout_hsi0_usb20_ref-.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
