crypto: qat - fix state restore for banks with exceptions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10470,6 +10470,7 @@
 	patches.suse/crypto-qat-use-unmanaged-allocation-for-dc_data.patch
 	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
+	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
