media: ivsc: Fix crash at shutdown due to missing mei_cldev_disable() calls (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10495,6 +10495,7 @@
 	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 	patches.suse/media-mt9m114-Fix-deadlock-in-get_frame_interval-set.patch
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
+	patches.suse/media-ivsc-Fix-crash-at-shutdown-due-to-missing-mei_.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
