--- a/series.conf
+++ b/series.conf
@@ -10520,6 +10520,7 @@
 	patches.suse/clk-renesas-rzv2h-Fix-missing-CLK_SET_RATE_PARENT-fl.patch
 	patches.suse/clk-samsung-gs101-fix-CLK_DOUT_CMU_G3D_BUSD.patch
 	patches.suse/clk-samsung-gs101-fix-alternate-mout_hsi0_usb20_ref-.patch
+	patches.suse/clk-samsung-exynos850-fix-a-comment.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
