--- a/series.conf
+++ b/series.conf
@@ -10515,6 +10515,7 @@
 	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
 	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
 	patches.suse/clk-davinci-Add-NULL-check-in-davinci_lpsc_clk_regis.patch
+	patches.suse/clk-xilinx-vcu-unregister-pll_post-only-if-registere.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
