mtd: rawnand: fsmc: Add missing check after DMA map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10532,6 +10532,7 @@
 	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
 	patches.suse/mtd-rawnand-rockchip-Add-missing-check-after-DMA-map.patch
+	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
