media: uvcvideo: Fix 1-byte out-of-bounds read in uvc_parse_format() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10486,6 +10486,7 @@
 	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
 	patches.suse/leds-flash-leds-qcom-flash-Fix-registry-access-after.patch
 	patches.suse/Revert-leds-trigger-netdev-Configure-LED-blink-inter.patch
+	patches.suse/media-uvcvideo-Fix-1-byte-out-of-bounds-read-in-uvc_.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
