--- a/series.conf
+++ b/series.conf
@@ -10491,6 +10491,7 @@
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
 	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
 	patches.suse/media-verisilicon-Fix-AV1-decoder-clock-frequency.patch
+	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
