--- a/series.conf
+++ b/series.conf
@@ -10501,6 +10501,7 @@
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
+	patches.suse/media-venus-Fix-OOB-read-due-to-missing-payload-boun.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
