media: v4l2-ctrls: Fix H264 SEPARATE_COLOUR_PLANE check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10492,6 +10492,7 @@
 	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
 	patches.suse/media-verisilicon-Fix-AV1-decoder-clock-frequency.patch
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
+	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
