clk: at91: sam9x7: update pll clk ranges (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10523,6 +10523,7 @@
 	patches.suse/clk-samsung-exynos850-fix-a-comment.patch
 	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
 	patches.suse/clk-thead-th1520-ap-Correctly-refer-the-parent-of-os.patch
+	patches.suse/clk-at91-sam9x7-update-pll-clk-ranges.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
