pwm: imx-tpm: Reset counter if CMOD is 0 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10512,6 +10512,7 @@
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
 	patches.suse/media-v4l2-Add-support-for-NV12M-tiled-variants-to-v.patch
+	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
