--- a/series.conf
+++ b/series.conf
@@ -10525,6 +10525,7 @@
 	patches.suse/clk-thead-th1520-ap-Correctly-refer-the-parent-of-os.patch
 	patches.suse/clk-at91-sam9x7-update-pll-clk-ranges.patch
 	patches.suse/clk-imx95-blk-ctl-Fix-synchronous-abort.patch
+	patches.suse/clk-qcom-gcc-ipq8074-fix-broken-freq-table-for-nss_p.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
