--- a/series.conf
+++ b/series.conf
@@ -10521,6 +10521,7 @@
 	patches.suse/clk-samsung-gs101-fix-CLK_DOUT_CMU_G3D_BUSD.patch
 	patches.suse/clk-samsung-gs101-fix-alternate-mout_hsi0_usb20_ref-.patch
 	patches.suse/clk-samsung-exynos850-fix-a-comment.patch
+	patches.suse/clk-sunxi-ng-v3s-Fix-de-clock-definition.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
