media: verisilicon: Fix AV1 decoder clock frequency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10490,6 +10490,7 @@
 	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
 	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
+	patches.suse/media-verisilicon-Fix-AV1-decoder-clock-frequency.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
