--- a/series.conf
+++ b/series.conf
@@ -10530,6 +10530,7 @@
 	patches.suse/mtd-spi-nor-spansion-Fixup-params-set_4byte_addr_mod.patch
 	patches.suse/mtd-spi-nor-Fix-spi_nor_try_unlock_all.patch
 	patches.suse/mtd-rawnand-renesas-Add-missing-check-after-DMA-map.patch
+	patches.suse/mtd-rawnand-atmel-Fix-dma_mapping_error-address.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
