--- a/series.conf
+++ b/series.conf
@@ -10471,6 +10471,7 @@
 	patches.suse/crypto-marvell-cesa-Fix-engine-load-inaccuracy.patch
 	patches.suse/crypto-qat-allow-enabling-VFs-in-the-absence-of-IOMM.patch
 	patches.suse/crypto-qat-fix-state-restore-for-banks-with-exceptio.patch
+	patches.suse/crypto-arm-aes-neonbs-work-around-gcc-15-warning.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
