--- a/series.conf
+++ b/series.conf
@@ -10482,6 +10482,7 @@
 	patches.suse/crypto-qat-disable-ZUC-256-capability-for-QAT-GEN5.patch
 	patches.suse/crypto-qat-flush-misc-workqueue-during-device-shutdo.patch
 	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
+	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
