--- a/series.conf
+++ b/series.conf
@@ -10506,6 +10506,7 @@
 	patches.suse/media-venus-Fix-MSM8998-frequency-table.patch
 	patches.suse/media-qcom-camss-cleanup-media-device-allocated-reso.patch
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
+	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
