--- a/series.conf
+++ b/series.conf
@@ -10507,6 +10507,7 @@
 	patches.suse/media-qcom-camss-cleanup-media-device-allocated-reso.patch
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
 	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
+	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
