media: ov2659: Fix memory leaks in ov2659_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10509,6 +10509,7 @@
 	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 	patches.suse/media-ti-j721e-csi2rx-fix-list_del-corruption.patch
+	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
