--- a/series.conf
+++ b/series.conf
@@ -10513,6 +10513,7 @@
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
 	patches.suse/media-v4l2-Add-support-for-NV12M-tiled-variants-to-v.patch
 	patches.suse/pwm-imx-tpm-Reset-counter-if-CMOD-is-0.patch
+	patches.suse/hwmon-gsc-hwmon-fix-fan-pwm-setpoint-show-functions.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
