media: venus: vdec: Clamp param smaller than 1fps and bigger than 240 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10497,6 +10497,7 @@
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
 	patches.suse/media-ivsc-Fix-crash-at-shutdown-due-to-missing-mei_.patch
 	patches.suse/media-pisp_be-Fix-pm_runtime-underrun-in-probe.patch
+	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
