--- a/series.conf
+++ b/series.conf
@@ -54330,6 +54330,7 @@
 	patches.suse/media-usbtv-Lock-resolution-while-streaming.patch
 	patches.suse/media-gspca-Add-bounds-checking-to-firmware-parser.patch
 	patches.suse/media-rainshadow-cec-fix-TOCTOU-race-condition-in-ra.patch
+	patches.suse/media-verisilicon-Fix-AV1-decoder-clock-frequency.patch
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
 	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
