--- a/series.conf
+++ b/series.conf
@@ -54341,6 +54341,7 @@
 	patches.suse/media-venus-Add-a-check-for-packet-size-after-readin.patch
 	patches.suse/media-venus-hfi-explicitly-release-IRQ-during-teardo.patch
 	patches.suse/media-vivid-fix-wrong-pixel_array-control-size.patch
+	patches.suse/media-ipu6-isys-Use-correct-pads-for-xlate_streams.patch
 	patches.suse/media-hi556-correct-the-test-pattern-configuration.patch
 	patches.suse/media-ov2659-Fix-memory-leaks-in-ov2659_probe.patch
 	patches.suse/media-uvcvideo-Do-not-mark-valid-metadata-as-invalid.patch
