--- a/series.conf
+++ b/series.conf
@@ -54334,6 +54334,7 @@
 	patches.suse/media-imx-fix-a-potential-memory-leak-in-imx_media_c.patch
 	patches.suse/media-v4l2-ctrls-Fix-H264-SEPARATE_COLOUR_PLANE-chec.patch
 	patches.suse/media-v4l2-ctrls-Don-t-reset-handler-s-error-in-v4l2.patch
+	patches.suse/media-ivsc-Fix-crash-at-shutdown-due-to-missing-mei_.patch
 	patches.suse/media-venus-vdec-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-venc-Clamp-param-smaller-than-1fps-and-b.patch
 	patches.suse/media-venus-protect-against-spurious-interrupts-duri.patch
