fs/orangefs: Allow 2 more characters in do_c_string() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33258,6 +33258,7 @@
 	patches.suse/drm-msm-dpu-Fill-in-min_prefill_lines-for-SC8180X.patch
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
+	patches.suse/fs-orangefs-Allow-2-more-characters-in-do_c_string.patch
 	patches.suse/jfs-fix-metapage-reference-count-leak-in-dbAllocCtl.patch
 
 	# mkp/scsi queue
