--- a/series.conf
+++ b/series.conf
@@ -7696,6 +7696,7 @@
 	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
+	patches.suse/selftests-bpf-Fix-selection-of-static-vs.-dynamic-LL.patch
 	patches.suse/x86-Kconfig-Always-enable-ARCH_SPARSEMEM_ENABLE.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-entry-Fix-ORC-unwinder-for-PUSH_REGS-with-save_ret-1.patch
