gve: Fix stuck TX queue for DQ queue format (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8866,6 +8866,7 @@
 	patches.kernel.org/6.12.41-055-dpaa2-switch-Fix-device-reference-count-leak-.patch
 	patches.kernel.org/6.12.41-056-e1000e-disregard-NVM-checksum-on-tgp-when-val.patch
 	patches.kernel.org/6.12.41-057-e1000e-ignore-uninitialized-checksum-word-on-.patch
+	patches.kernel.org/6.12.41-058-gve-Fix-stuck-TX-queue-for-DQ-queue-format.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
