--- a/series.conf
+++ b/series.conf
@@ -8856,6 +8856,7 @@
 	patches.kernel.org/6.12.41-045-timekeeping-Zero-initialize-system_counterval.patch
 	patches.kernel.org/6.12.41-046-i2c-qup-jump-out-of-the-loop-in-case-of-timeo.patch
 	patches.kernel.org/6.12.41-047-i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
+	patches.kernel.org/6.12.41-048-i2c-virtio-Avoid-hang-by-using-interruptible-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
