xfrm: state: use a consistent pcpu_id in xfrm_state_find (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8827,6 +8827,7 @@
 	patches.kernel.org/6.12.41-016-platform-x86-Fix-initialization-order-for-fir.patch
 	patches.kernel.org/6.12.41-017-staging-vchiq_arm-Make-vchiq_shutdown-never-f.patch
 	patches.kernel.org/6.12.41-018-xfrm-state-initialize-state_ptrs-earlier-in-x.patch
+	patches.kernel.org/6.12.41-019-xfrm-state-use-a-consistent-pcpu_id-in-xfrm_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
