--- a/series.conf
+++ b/series.conf
@@ -8845,6 +8845,7 @@
 	patches.kernel.org/6.12.41-034-s390-ism-fix-concurrency-management-in-ism_cm.patch
 	patches.kernel.org/6.12.41-035-net-hns3-fix-concurrent-setting-vlan-filter-i.patch
 	patches.kernel.org/6.12.41-036-net-hns3-disable-interrupt-when-ptp-init-fail.patch
+	patches.kernel.org/6.12.41-037-net-hns3-fixed-vf-get-max-channels-bug.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
