drm/sched: Remove optimization that causes hang when killing dependent jobs (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8850,6 +8850,7 @@
 	patches.kernel.org/6.12.41-039-platform-x86-ideapad-laptop-Fix-FnLock-not-re.patch
 	patches.kernel.org/6.12.41-040-platform-x86-ideapad-laptop-Fix-kbd-backlight.patch
 	patches.kernel.org/6.12.41-041-drm-amdgpu-Reset-the-clear-flag-in-buddy-duri.patch
+	patches.kernel.org/6.12.41-042-drm-sched-Remove-optimization-that-causes-han.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
