erofs: use Z_EROFS_LCLUSTER_TYPE_MAX to simplify switches (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8889,6 +8889,7 @@
 	patches.kernel.org/6.12.41-078-arm64-dts-qcom-x1e78100-t14s-mark-l12b-and-l1.patch
 	patches.kernel.org/6.12.41-079-erofs-simplify-z_erofs_load_compact_lcluster.patch
 	patches.kernel.org/6.12.41-080-erofs-refine-z_erofs_get_extent_compressedlen.patch
+	patches.kernel.org/6.12.41-081-erofs-use-Z_EROFS_LCLUSTER_TYPE_MAX-to-simpli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
