Revert "drm/xe/gt: Update handling of xe_force_wake_get return" (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8920,6 +8920,7 @@
 	patches.kernel.org/6.12.41-109-ALSA-hda-tegra-Add-Tegra264-support.patch
 	patches.kernel.org/6.12.41-110-ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 	patches.kernel.org/6.12.41-111-drm-i915-dp-Fix-2.7-Gbps-DP_LINK_BW-value-on-.patch
+	patches.kernel.org/6.12.41-112-Revert-drm-xe-gt-Update-handling-of-xe_force_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
