net/sched: sch_qfq: Avoid triggering might_sleep in atomic context in qfq_delete_class (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8837,6 +8837,7 @@
 	patches.kernel.org/6.12.41-026-i40e-report-VF-tx_dropped-with-tx_errors-inst.patch
 	patches.kernel.org/6.12.41-027-i40e-When-removing-VF-MAC-filters-only-check-.patch
 	patches.kernel.org/6.12.41-028-net-appletalk-Fix-use-after-free-in-AARP-prox.patch
+	patches.kernel.org/6.12.41-029-net-sched-sch_qfq-Avoid-triggering-might_slee.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
