x86/traps: Initialize DR7 by writing its architectural reset value (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8809,6 +8809,7 @@
 	patches.kernel.org/6.12.40-158-iommu-vt-d-Fix-misplaced-domain_attached-assi.patch
 	patches.kernel.org/6.12.40-159-KVM-x86-xen-Fix-cleanup-logic-in-emulation-of.patch
 	patches.kernel.org/6.12.40-160-Linux-6.12.40.patch
+	patches.kernel.org/6.12.41-001-x86-traps-Initialize-DR7-by-writing-its-archi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
