virtio_ring: Fix error reporting in virtqueue_resize (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8812,6 +8812,7 @@
 	patches.kernel.org/6.12.41-001-x86-traps-Initialize-DR7-by-writing-its-archi.patch
 	patches.kernel.org/6.12.41-002-Input-gpio-keys-fix-a-sleep-while-atomic-with.patch
 	patches.kernel.org/6.12.41-003-virtio_net-Enforce-minimum-TX-ring-size-for-r.patch
+	patches.kernel.org/6.12.41-004-virtio_ring-Fix-error-reporting-in-virtqueue_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
