--- a/series.conf
+++ b/series.conf
@@ -8887,6 +8887,7 @@
 	patches.kernel.org/6.12.41-076-crypto-powerpc-poly1305-add-depends-on-BROKEN.patch
 	patches.kernel.org/6.12.41-077-mtd-rawnand-qcom-Fix-last-codeword-read-in-qc.patch
 	patches.kernel.org/6.12.41-078-arm64-dts-qcom-x1e78100-t14s-mark-l12b-and-l1.patch
+	patches.kernel.org/6.12.41-079-erofs-simplify-z_erofs_load_compact_lcluster.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
