mm/vmscan: fix hwpoisoned large folio handling in shrink_folio_list (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8873,6 +8873,7 @@
 	patches.kernel.org/6.12.41-062-resource-fix-false-warning-in-__request_regio.patch
 	patches.kernel.org/6.12.41-063-selftests-mptcp-connect-also-cover-alt-modes.patch
 	patches.kernel.org/6.12.41-064-selftests-mptcp-connect-also-cover-checksum.patch
+	patches.kernel.org/6.12.41-065-mm-vmscan-fix-hwpoisoned-large-folio-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
