ext4: correct the error handle in ext4_fallocate() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8902,6 +8902,7 @@
 	patches.kernel.org/6.12.41-091-ext4-move-out-inode_lock-into-ext4_fallocate.patch
 	patches.kernel.org/6.12.41-092-ext4-move-out-common-parts-into-ext4_fallocat.patch
 	patches.kernel.org/6.12.41-093-ext4-fix-incorrect-punch-max_end.patch
+	patches.kernel.org/6.12.41-094-ext4-correct-the-error-handle-in-ext4_falloca.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
