--- a/series.conf
+++ b/series.conf
@@ -8900,6 +8900,7 @@
 	patches.kernel.org/6.12.41-089-ext4-refactor-ext4_insert_range.patch
 	patches.kernel.org/6.12.41-090-ext4-factor-out-ext4_do_fallocate.patch
 	patches.kernel.org/6.12.41-091-ext4-move-out-inode_lock-into-ext4_fallocate.patch
+	patches.kernel.org/6.12.41-092-ext4-move-out-common-parts-into-ext4_fallocat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
