--- a/series.conf
+++ b/series.conf
@@ -8870,6 +8870,7 @@
 	patches.kernel.org/6.12.41-059-ice-Fix-a-null-pointer-dereference-in-ice_cop.patch
 	patches.kernel.org/6.12.41-060-kasan-use-vmalloc_dump_obj-for-vmalloc-error-.patch
 	patches.kernel.org/6.12.41-061-nilfs2-reject-invalid-file-types-when-reading.patch
+	patches.kernel.org/6.12.41-062-resource-fix-false-warning-in-__request_regio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
