erofs: fix large fragment handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8892,6 +8892,7 @@
 	patches.kernel.org/6.12.41-081-erofs-use-Z_EROFS_LCLUSTER_TYPE_MAX-to-simpli.patch
 	patches.kernel.org/6.12.41-082-erofs-simplify-tail-inline-pcluster-handling.patch
 	patches.kernel.org/6.12.41-083-erofs-clean-up-header-parsing-for-ztailpackin.patch
+	patches.kernel.org/6.12.41-084-erofs-fix-large-fragment-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
