--- a/series.conf
+++ b/series.conf
@@ -8897,6 +8897,7 @@
 	patches.kernel.org/6.12.41-086-ext4-refactor-ext4_punch_hole.patch
 	patches.kernel.org/6.12.41-087-ext4-refactor-ext4_zero_range.patch
 	patches.kernel.org/6.12.41-088-ext4-refactor-ext4_collapse_range.patch
+	patches.kernel.org/6.12.41-089-ext4-refactor-ext4_insert_range.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
