platform/mellanox: mlxbf-pmc: Validate event/enable input (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8820,6 +8820,7 @@
 	patches.kernel.org/6.12.41-009-iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.kernel.org/6.12.41-010-regmap-fix-potential-memory-leak-of-regmap_bu.patch
 	patches.kernel.org/6.12.41-011-platform-mellanox-mlxbf-pmc-Remove-newline-ch.patch
+	patches.kernel.org/6.12.41-012-platform-mellanox-mlxbf-pmc-Validate-event-en.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
