--- a/series.conf
+++ b/series.conf
@@ -8883,6 +8883,7 @@
 	patches.kernel.org/6.12.41-072-spi-cadence-quadspi-fix-cleanup-of-rx_chan-on.patch
 	patches.kernel.org/6.12.41-073-x86-bugs-Fix-use-of-possibly-uninit-value-in-.patch
 	patches.kernel.org/6.12.41-074-jfs-reject-on-disk-inodes-of-an-unsupported-t.patch
+	patches.kernel.org/6.12.41-075-comedi-comedi_test-Fix-possible-deletion-of-u.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
