i40e: When removing VF MAC filters, only check PF-set MAC (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8835,6 +8835,7 @@
 	patches.kernel.org/6.12.41-024-net-mlx5-Fix-memory-leak-in-cmd_exec.patch
 	patches.kernel.org/6.12.41-025-net-mlx5-E-Switch-Fix-peer-miss-rules-to-use-.patch
 	patches.kernel.org/6.12.41-026-i40e-report-VF-tx_dropped-with-tx_errors-inst.patch
+	patches.kernel.org/6.12.41-027-i40e-When-removing-VF-MAC-filters-only-check-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
