selftests: drv-net: wait for iperf client to stop sending (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8841,6 +8841,7 @@
 	patches.kernel.org/6.12.41-030-can-netlink-can_changelink-fix-NULL-pointer-d.patch
 	patches.kernel.org/6.12.41-031-drm-bridge-ti-sn65dsi86-Remove-extra-semicolo.patch
 	patches.kernel.org/6.12.41-032-ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN.patch
+	patches.kernel.org/6.12.41-033-selftests-drv-net-wait-for-iperf-client-to-st.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
