regulator: core: fix NULL dereference on unbind due to stale coupling data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8813,6 +8813,7 @@
 	patches.kernel.org/6.12.41-002-Input-gpio-keys-fix-a-sleep-while-atomic-with.patch
 	patches.kernel.org/6.12.41-003-virtio_net-Enforce-minimum-TX-ring-size-for-r.patch
 	patches.kernel.org/6.12.41-004-virtio_ring-Fix-error-reporting-in-virtqueue_.patch
+	patches.kernel.org/6.12.41-005-regulator-core-fix-NULL-dereference-on-unbind.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
