--- a/series.conf
+++ b/series.conf
@@ -8881,6 +8881,7 @@
 	patches.kernel.org/6.12.41-070-usb-typec-tcpm-allow-switching-to-mode-access.patch
 	patches.kernel.org/6.12.41-071-usb-typec-tcpm-apply-vbus-before-data-bringup.patch
 	patches.kernel.org/6.12.41-072-spi-cadence-quadspi-fix-cleanup-of-rx_chan-on.patch
+	patches.kernel.org/6.12.41-073-x86-bugs-Fix-use-of-possibly-uninit-value-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
