--- a/series.conf
+++ b/series.conf
@@ -8831,6 +8831,7 @@
 	patches.kernel.org/6.12.41-020-xfrm-Set-transport-header-to-fix-UDP-GRO-hand.patch
 	patches.kernel.org/6.12.41-021-xfrm-interface-fix-use-after-free-after-chang.patch
 	patches.kernel.org/6.12.41-022-ASoC-mediatek-mt8365-dai-i2s-pass-correct-siz.patch
+	patches.kernel.org/6.12.41-023-net-ti-icssg-prueth-Fix-buffer-allocation-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
