arm64: dts: qcom: x1-crd: Fix vreg_l2j_1p2 voltage (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8910,6 +8910,7 @@
 	patches.kernel.org/6.12.41-099-KVM-x86-model-canonical-checks-more-precisely.patch
 	patches.kernel.org/6.12.41-100-KVM-x86-hyper-v-Skip-non-canonical-addresses-.patch
 	patches.kernel.org/6.12.41-101-x86-hyperv-Fix-APIC-ID-and-VP-index-confusion.patch
+	patches.kernel.org/6.12.41-102-arm64-dts-qcom-x1-crd-Fix-vreg_l2j_1p2-voltag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
