--- a/series.conf
+++ b/series.conf
@@ -8854,6 +8854,7 @@
 	patches.kernel.org/6.12.41-043-mm-ksm-fix-Wsometimes-uninitialized-from-clan.patch
 	patches.kernel.org/6.12.41-044-ARM-9450-1-Fix-allowing-linker-DCE-with-binut.patch
 	patches.kernel.org/6.12.41-045-timekeeping-Zero-initialize-system_counterval.patch
+	patches.kernel.org/6.12.41-046-i2c-qup-jump-out-of-the-loop-in-case-of-timeo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
