arm64: dts: qcom: x1e78100-t14s: mark l12b and l15b always-on (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8886,6 +8886,7 @@
 	patches.kernel.org/6.12.41-075-comedi-comedi_test-Fix-possible-deletion-of-u.patch
 	patches.kernel.org/6.12.41-076-crypto-powerpc-poly1305-add-depends-on-BROKEN.patch
 	patches.kernel.org/6.12.41-077-mtd-rawnand-qcom-Fix-last-codeword-read-in-qc.patch
+	patches.kernel.org/6.12.41-078-arm64-dts-qcom-x1e78100-t14s-mark-l12b-and-l1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
