--- a/series.conf
+++ b/series.conf
@@ -8857,6 +8857,7 @@
 	patches.kernel.org/6.12.41-046-i2c-qup-jump-out-of-the-loop-in-case-of-timeo.patch
 	patches.kernel.org/6.12.41-047-i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.kernel.org/6.12.41-048-i2c-virtio-Avoid-hang-by-using-interruptible-.patch
+	patches.kernel.org/6.12.41-049-bus-fsl-mc-Fix-potential-double-device-refere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
