--- a/series.conf
+++ b/series.conf
@@ -8912,6 +8912,7 @@
 	patches.kernel.org/6.12.41-101-x86-hyperv-Fix-APIC-ID-and-VP-index-confusion.patch
 	patches.kernel.org/6.12.41-102-arm64-dts-qcom-x1-crd-Fix-vreg_l2j_1p2-voltag.patch
 	patches.kernel.org/6.12.41-103-Revert-wifi-mt76-mt7925-Update-mt7925_mcu_uni.patch
+	patches.kernel.org/6.12.41-104-wifi-mt76-mt7925-adjust-rm-BSS-flow-to-preven.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
