--- a/series.conf
+++ b/series.conf
@@ -8926,6 +8926,7 @@
 	patches.kernel.org/6.12.41-115-Revert-drm-xe-forcewake-Add-a-helper-xe_force.patch
 	patches.kernel.org/6.12.41-116-KVM-x86-Free-vCPUs-before-freeing-VM-state.patch
 	patches.kernel.org/6.12.41-117-mm-khugepaged-fix-call-hpage_collapse_scan_fi.patch
+	patches.kernel.org/6.12.41-118-Linux-6.12.41.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
