e1000e: ignore uninitialized checksum word on tgp (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8865,6 +8865,7 @@
 	patches.kernel.org/6.12.41-054-dpaa2-eth-Fix-device-reference-count-leak-in-.patch
 	patches.kernel.org/6.12.41-055-dpaa2-switch-Fix-device-reference-count-leak-.patch
 	patches.kernel.org/6.12.41-056-e1000e-disregard-NVM-checksum-on-tgp-when-val.patch
+	patches.kernel.org/6.12.41-057-e1000e-ignore-uninitialized-checksum-word-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
