ALSA: hda/realtek - Add mute LED support for HP Pavilion 15-eg0xxx (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8859,6 +8859,7 @@
 	patches.kernel.org/6.12.41-048-i2c-virtio-Avoid-hang-by-using-interruptible-.patch
 	patches.kernel.org/6.12.41-049-bus-fsl-mc-Fix-potential-double-device-refere.patch
 	patches.kernel.org/6.12.41-050-sprintf.h-requires-stdarg.h.patch
+	patches.kernel.org/6.12.41-051-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
