x86/hyperv: Fix usage of cpu_online_mask to get valid cpu (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8823,6 +8823,7 @@
 	patches.kernel.org/6.12.41-012-platform-mellanox-mlxbf-pmc-Validate-event-en.patch
 	patches.kernel.org/6.12.41-013-platform-mellanox-mlxbf-pmc-Use-kstrtobool-to.patch
 	patches.kernel.org/6.12.41-014-tools-hv-fcopy-Fix-incorrect-file-path-conver.patch
+	patches.kernel.org/6.12.41-015-x86-hyperv-Fix-usage-of-cpu_online_mask-to-ge.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
