--- a/series.conf
+++ b/series.conf
@@ -8924,6 +8924,7 @@
 	patches.kernel.org/6.12.41-113-Revert-drm-xe-tests-mocs-Update-xe_force_wake.patch
 	patches.kernel.org/6.12.41-114-Revert-drm-xe-devcoredump-Update-handling-of-.patch
 	patches.kernel.org/6.12.41-115-Revert-drm-xe-forcewake-Add-a-helper-xe_force.patch
+	patches.kernel.org/6.12.41-116-KVM-x86-Free-vCPUs-before-freeing-VM-state.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
