iio: adc: ad7949: use spi_is_bpw_supported() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8817,6 +8817,7 @@
 	patches.kernel.org/6.12.41-006-platform-x86-asus-nb-wmi-add-DMI-quirk-for-AS.patch
 	patches.kernel.org/6.12.41-007-RDMA-core-Rate-limit-GID-cache-warning-messag.patch
 	patches.kernel.org/6.12.41-008-interconnect-qcom-sc7280-Add-missing-num_link.patch
+	patches.kernel.org/6.12.41-009-iio-adc-ad7949-use-spi_is_bpw_supported.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
