arm64/entry: Mask DAIF in cpu_switch_to(), call_on_irq_stack() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8861,6 +8861,7 @@
 	patches.kernel.org/6.12.41-050-sprintf.h-requires-stdarg.h.patch
 	patches.kernel.org/6.12.41-051-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 	patches.kernel.org/6.12.41-052-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
+	patches.kernel.org/6.12.41-053-arm64-entry-Mask-DAIF-in-cpu_switch_to-call_o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
