--- a/series.conf
+++ b/series.conf
@@ -8923,6 +8923,7 @@
 	patches.kernel.org/6.12.41-112-Revert-drm-xe-gt-Update-handling-of-xe_force_.patch
 	patches.kernel.org/6.12.41-113-Revert-drm-xe-tests-mocs-Update-xe_force_wake.patch
 	patches.kernel.org/6.12.41-114-Revert-drm-xe-devcoredump-Update-handling-of-.patch
+	patches.kernel.org/6.12.41-115-Revert-drm-xe-forcewake-Add-a-helper-xe_force.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
