--- a/series.conf
+++ b/series.conf
@@ -8811,6 +8811,7 @@
 	patches.kernel.org/6.12.40-160-Linux-6.12.40.patch
 	patches.kernel.org/6.12.41-001-x86-traps-Initialize-DR7-by-writing-its-archi.patch
 	patches.kernel.org/6.12.41-002-Input-gpio-keys-fix-a-sleep-while-atomic-with.patch
+	patches.kernel.org/6.12.41-003-virtio_net-Enforce-minimum-TX-ring-size-for-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
