tools/hv: fcopy: Fix incorrect file path conversion (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8822,6 +8822,7 @@
 	patches.kernel.org/6.12.41-011-platform-mellanox-mlxbf-pmc-Remove-newline-ch.patch
 	patches.kernel.org/6.12.41-012-platform-mellanox-mlxbf-pmc-Validate-event-en.patch
 	patches.kernel.org/6.12.41-013-platform-mellanox-mlxbf-pmc-Use-kstrtobool-to.patch
+	patches.kernel.org/6.12.41-014-tools-hv-fcopy-Fix-incorrect-file-path-conver.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
