--- a/series.conf
+++ b/series.conf
@@ -8858,6 +8858,7 @@
 	patches.kernel.org/6.12.41-047-i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.kernel.org/6.12.41-048-i2c-virtio-Avoid-hang-by-using-interruptible-.patch
 	patches.kernel.org/6.12.41-049-bus-fsl-mc-Fix-potential-double-device-refere.patch
+	patches.kernel.org/6.12.41-050-sprintf.h-requires-stdarg.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
