can: netlink: can_changelink(): fix NULL pointer deref of struct can_priv::do_set_mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8838,6 +8838,7 @@
 	patches.kernel.org/6.12.41-027-i40e-When-removing-VF-MAC-filters-only-check-.patch
 	patches.kernel.org/6.12.41-028-net-appletalk-Fix-use-after-free-in-AARP-prox.patch
 	patches.kernel.org/6.12.41-029-net-sched-sch_qfq-Avoid-triggering-might_slee.patch
+	patches.kernel.org/6.12.41-030-can-netlink-can_changelink-fix-NULL-pointer-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
