ext4: factor out ext4_do_fallocate() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8898,6 +8898,7 @@
 	patches.kernel.org/6.12.41-087-ext4-refactor-ext4_zero_range.patch
 	patches.kernel.org/6.12.41-088-ext4-refactor-ext4_collapse_range.patch
 	patches.kernel.org/6.12.41-089-ext4-refactor-ext4_insert_range.patch
+	patches.kernel.org/6.12.41-090-ext4-factor-out-ext4_do_fallocate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
