timekeeping: Zero initialize system_counterval when querying time from phc drivers (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8853,6 +8853,7 @@
 	patches.kernel.org/6.12.41-042-drm-sched-Remove-optimization-that-causes-han.patch
 	patches.kernel.org/6.12.41-043-mm-ksm-fix-Wsometimes-uninitialized-from-clan.patch
 	patches.kernel.org/6.12.41-044-ARM-9450-1-Fix-allowing-linker-DCE-with-binut.patch
+	patches.kernel.org/6.12.41-045-timekeeping-Zero-initialize-system_counterval.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
