spi: cadence-quadspi: fix cleanup of rx_chan on failure paths (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8880,6 +8880,7 @@
 	patches.kernel.org/6.12.41-069-usb-typec-tcpm-allow-to-use-sink-in-accessory.patch
 	patches.kernel.org/6.12.41-070-usb-typec-tcpm-allow-switching-to-mode-access.patch
 	patches.kernel.org/6.12.41-071-usb-typec-tcpm-apply-vbus-before-data-bringup.patch
+	patches.kernel.org/6.12.41-072-spi-cadence-quadspi-fix-cleanup-of-rx_chan-on.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
