crypto: powerpc/poly1305 - add depends on BROKEN for now (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8884,6 +8884,7 @@
 	patches.kernel.org/6.12.41-073-x86-bugs-Fix-use-of-possibly-uninit-value-in-.patch
 	patches.kernel.org/6.12.41-074-jfs-reject-on-disk-inodes-of-an-unsupported-t.patch
 	patches.kernel.org/6.12.41-075-comedi-comedi_test-Fix-possible-deletion-of-u.patch
+	patches.kernel.org/6.12.41-076-crypto-powerpc-poly1305-add-depends-on-BROKEN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
