jfs: reject on-disk inodes of an unsupported type (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8882,6 +8882,7 @@
 	patches.kernel.org/6.12.41-071-usb-typec-tcpm-apply-vbus-before-data-bringup.patch
 	patches.kernel.org/6.12.41-072-spi-cadence-quadspi-fix-cleanup-of-rx_chan-on.patch
 	patches.kernel.org/6.12.41-073-x86-bugs-Fix-use-of-possibly-uninit-value-in-.patch
+	patches.kernel.org/6.12.41-074-jfs-reject-on-disk-inodes-of-an-unsupported-t.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
