--- a/series.conf
+++ b/series.conf
@@ -8867,6 +8867,7 @@
 	patches.kernel.org/6.12.41-056-e1000e-disregard-NVM-checksum-on-tgp-when-val.patch
 	patches.kernel.org/6.12.41-057-e1000e-ignore-uninitialized-checksum-word-on-.patch
 	patches.kernel.org/6.12.41-058-gve-Fix-stuck-TX-queue-for-DQ-queue-format.patch
+	patches.kernel.org/6.12.41-059-ice-Fix-a-null-pointer-dereference-in-ice_cop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
