--- a/series.conf
+++ b/series.conf
@@ -8846,6 +8846,7 @@
 	patches.kernel.org/6.12.41-035-net-hns3-fix-concurrent-setting-vlan-filter-i.patch
 	patches.kernel.org/6.12.41-036-net-hns3-disable-interrupt-when-ptp-init-fail.patch
 	patches.kernel.org/6.12.41-037-net-hns3-fixed-vf-get-max-channels-bug.patch
+	patches.kernel.org/6.12.41-038-net-hns3-default-enable-tx-bounce-buffer-when.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
