--- a/series.conf
+++ b/series.conf
@@ -8814,6 +8814,7 @@
 	patches.kernel.org/6.12.41-003-virtio_net-Enforce-minimum-TX-ring-size-for-r.patch
 	patches.kernel.org/6.12.41-004-virtio_ring-Fix-error-reporting-in-virtqueue_.patch
 	patches.kernel.org/6.12.41-005-regulator-core-fix-NULL-dereference-on-unbind.patch
+	patches.kernel.org/6.12.41-006-platform-x86-asus-nb-wmi-add-DMI-quirk-for-AS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
