--- a/series.conf
+++ b/series.conf
@@ -8821,6 +8821,7 @@
 	patches.kernel.org/6.12.41-010-regmap-fix-potential-memory-leak-of-regmap_bu.patch
 	patches.kernel.org/6.12.41-011-platform-mellanox-mlxbf-pmc-Remove-newline-ch.patch
 	patches.kernel.org/6.12.41-012-platform-mellanox-mlxbf-pmc-Validate-event-en.patch
+	patches.kernel.org/6.12.41-013-platform-mellanox-mlxbf-pmc-Use-kstrtobool-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
