--- a/series.conf
+++ b/series.conf
@@ -8914,6 +8914,7 @@
 	patches.kernel.org/6.12.41-103-Revert-wifi-mt76-mt7925-Update-mt7925_mcu_uni.patch
 	patches.kernel.org/6.12.41-104-wifi-mt76-mt7925-adjust-rm-BSS-flow-to-preven.patch
 	patches.kernel.org/6.12.41-105-iio-hid-sensor-prox-Restore-lost-scale-assign.patch
+	patches.kernel.org/6.12.41-106-iio-hid-sensor-prox-Fix-incorrect-OFFSET-calc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
