--- a/series.conf
+++ b/series.conf
@@ -8844,6 +8844,7 @@
 	patches.kernel.org/6.12.41-033-selftests-drv-net-wait-for-iperf-client-to-st.patch
 	patches.kernel.org/6.12.41-034-s390-ism-fix-concurrency-management-in-ism_cm.patch
 	patches.kernel.org/6.12.41-035-net-hns3-fix-concurrent-setting-vlan-filter-i.patch
+	patches.kernel.org/6.12.41-036-net-hns3-disable-interrupt-when-ptp-init-fail.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
