--- a/series.conf
+++ b/series.conf
@@ -8874,6 +8874,7 @@
 	patches.kernel.org/6.12.41-063-selftests-mptcp-connect-also-cover-alt-modes.patch
 	patches.kernel.org/6.12.41-064-selftests-mptcp-connect-also-cover-checksum.patch
 	patches.kernel.org/6.12.41-065-mm-vmscan-fix-hwpoisoned-large-folio-handling.patch
+	patches.kernel.org/6.12.41-066-mm-zsmalloc-do-not-pass-__GFP_MOVABLE-if-CONF.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
