--- a/series.conf
+++ b/series.conf
@@ -8872,6 +8872,7 @@
 	patches.kernel.org/6.12.41-061-nilfs2-reject-invalid-file-types-when-reading.patch
 	patches.kernel.org/6.12.41-062-resource-fix-false-warning-in-__request_regio.patch
 	patches.kernel.org/6.12.41-063-selftests-mptcp-connect-also-cover-alt-modes.patch
+	patches.kernel.org/6.12.41-064-selftests-mptcp-connect-also-cover-checksum.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
