--- a/series.conf
+++ b/series.conf
@@ -8839,6 +8839,7 @@
 	patches.kernel.org/6.12.41-028-net-appletalk-Fix-use-after-free-in-AARP-prox.patch
 	patches.kernel.org/6.12.41-029-net-sched-sch_qfq-Avoid-triggering-might_slee.patch
 	patches.kernel.org/6.12.41-030-can-netlink-can_changelink-fix-NULL-pointer-d.patch
+	patches.kernel.org/6.12.41-031-drm-bridge-ti-sn65dsi86-Remove-extra-semicolo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
