selftests: mptcp: connect: also cover alt modes (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8871,6 +8871,7 @@
 	patches.kernel.org/6.12.41-060-kasan-use-vmalloc_dump_obj-for-vmalloc-error-.patch
 	patches.kernel.org/6.12.41-061-nilfs2-reject-invalid-file-types-when-reading.patch
 	patches.kernel.org/6.12.41-062-resource-fix-false-warning-in-__request_regio.patch
+	patches.kernel.org/6.12.41-063-selftests-mptcp-connect-also-cover-alt-modes.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
