--- a/series.conf
+++ b/series.conf
@@ -8832,6 +8832,7 @@
 	patches.kernel.org/6.12.41-021-xfrm-interface-fix-use-after-free-after-chang.patch
 	patches.kernel.org/6.12.41-022-ASoC-mediatek-mt8365-dai-i2s-pass-correct-siz.patch
 	patches.kernel.org/6.12.41-023-net-ti-icssg-prueth-Fix-buffer-allocation-for.patch
+	patches.kernel.org/6.12.41-024-net-mlx5-Fix-memory-leak-in-cmd_exec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
