--- a/series.conf
+++ b/series.conf
@@ -8877,6 +8877,7 @@
 	patches.kernel.org/6.12.41-066-mm-zsmalloc-do-not-pass-__GFP_MOVABLE-if-CONF.patch
 	patches.kernel.org/6.12.41-067-rust-give-Clippy-the-minimum-supported-Rust-v.patch
 	patches.kernel.org/6.12.41-068-selftests-bpf-Add-tests-with-stack-ptr-regist.patch
+	patches.kernel.org/6.12.41-069-usb-typec-tcpm-allow-to-use-sink-in-accessory.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
