ext4: refactor ext4_collapse_range() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8896,6 +8896,7 @@
 	patches.kernel.org/6.12.41-085-ext4-don-t-explicit-update-times-in-ext4_fall.patch
 	patches.kernel.org/6.12.41-086-ext4-refactor-ext4_punch_hole.patch
 	patches.kernel.org/6.12.41-087-ext4-refactor-ext4_zero_range.patch
+	patches.kernel.org/6.12.41-088-ext4-refactor-ext4_collapse_range.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
