usb: typec: tcpm: apply vbus before data bringup in tcpm_src_attach (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8879,6 +8879,7 @@
 	patches.kernel.org/6.12.41-068-selftests-bpf-Add-tests-with-stack-ptr-regist.patch
 	patches.kernel.org/6.12.41-069-usb-typec-tcpm-allow-to-use-sink-in-accessory.patch
 	patches.kernel.org/6.12.41-070-usb-typec-tcpm-allow-switching-to-mode-access.patch
+	patches.kernel.org/6.12.41-071-usb-typec-tcpm-apply-vbus-before-data-bringup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
