--- a/series.conf
+++ b/series.conf
@@ -8901,6 +8901,7 @@
 	patches.kernel.org/6.12.41-090-ext4-factor-out-ext4_do_fallocate.patch
 	patches.kernel.org/6.12.41-091-ext4-move-out-inode_lock-into-ext4_fallocate.patch
 	patches.kernel.org/6.12.41-092-ext4-move-out-common-parts-into-ext4_fallocat.patch
+	patches.kernel.org/6.12.41-093-ext4-fix-incorrect-punch-max_end.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
