--- a/series.conf
+++ b/series.conf
@@ -8848,6 +8848,7 @@
 	patches.kernel.org/6.12.41-037-net-hns3-fixed-vf-get-max-channels-bug.patch
 	patches.kernel.org/6.12.41-038-net-hns3-default-enable-tx-bounce-buffer-when.patch
 	patches.kernel.org/6.12.41-039-platform-x86-ideapad-laptop-Fix-FnLock-not-re.patch
+	patches.kernel.org/6.12.41-040-platform-x86-ideapad-laptop-Fix-kbd-backlight.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
