ASoC: mediatek: mt8365-dai-i2s: pass correct size to mt8365_dai_set_priv (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8830,6 +8830,7 @@
 	patches.kernel.org/6.12.41-019-xfrm-state-use-a-consistent-pcpu_id-in-xfrm_s.patch
 	patches.kernel.org/6.12.41-020-xfrm-Set-transport-header-to-fix-UDP-GRO-hand.patch
 	patches.kernel.org/6.12.41-021-xfrm-interface-fix-use-after-free-after-chang.patch
+	patches.kernel.org/6.12.41-022-ASoC-mediatek-mt8365-dai-i2s-pass-correct-siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
