--- a/series.conf
+++ b/series.conf
@@ -8836,6 +8836,7 @@
 	patches.kernel.org/6.12.41-025-net-mlx5-E-Switch-Fix-peer-miss-rules-to-use-.patch
 	patches.kernel.org/6.12.41-026-i40e-report-VF-tx_dropped-with-tx_errors-inst.patch
 	patches.kernel.org/6.12.41-027-i40e-When-removing-VF-MAC-filters-only-check-.patch
+	patches.kernel.org/6.12.41-028-net-appletalk-Fix-use-after-free-in-AARP-prox.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
