i2c: tegra: Fix reset error handling with ACPI (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8855,6 +8855,7 @@
 	patches.kernel.org/6.12.41-044-ARM-9450-1-Fix-allowing-linker-DCE-with-binut.patch
 	patches.kernel.org/6.12.41-045-timekeeping-Zero-initialize-system_counterval.patch
 	patches.kernel.org/6.12.41-046-i2c-qup-jump-out-of-the-loop-in-case-of-timeo.patch
+	patches.kernel.org/6.12.41-047-i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
