--- a/series.conf
+++ b/series.conf
@@ -8843,6 +8843,7 @@
 	patches.kernel.org/6.12.41-032-ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN.patch
 	patches.kernel.org/6.12.41-033-selftests-drv-net-wait-for-iperf-client-to-st.patch
 	patches.kernel.org/6.12.41-034-s390-ism-fix-concurrency-management-in-ism_cm.patch
+	patches.kernel.org/6.12.41-035-net-hns3-fix-concurrent-setting-vlan-filter-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
