--- a/series.conf
+++ b/series.conf
@@ -8818,6 +8818,7 @@
 	patches.kernel.org/6.12.41-007-RDMA-core-Rate-limit-GID-cache-warning-messag.patch
 	patches.kernel.org/6.12.41-008-interconnect-qcom-sc7280-Add-missing-num_link.patch
 	patches.kernel.org/6.12.41-009-iio-adc-ad7949-use-spi_is_bpw_supported.patch
+	patches.kernel.org/6.12.41-010-regmap-fix-potential-memory-leak-of-regmap_bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
