ALSA: hda/tegra: Add Tegra264 support (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8917,6 +8917,7 @@
 	patches.kernel.org/6.12.41-106-iio-hid-sensor-prox-Fix-incorrect-OFFSET-calc.patch
 	patches.kernel.org/6.12.41-107-ARM-9448-1-Use-an-absolute-path-to-unified.h-.patch
 	patches.kernel.org/6.12.41-108-Drivers-hv-Make-the-sysfs-node-size-for-the-r.patch
+	patches.kernel.org/6.12.41-109-ALSA-hda-tegra-Add-Tegra264-support.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
