erofs: simplify tail inline pcluster handling (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8890,6 +8890,7 @@
 	patches.kernel.org/6.12.41-079-erofs-simplify-z_erofs_load_compact_lcluster.patch
 	patches.kernel.org/6.12.41-080-erofs-refine-z_erofs_get_extent_compressedlen.patch
 	patches.kernel.org/6.12.41-081-erofs-use-Z_EROFS_LCLUSTER_TYPE_MAX-to-simpli.patch
+	patches.kernel.org/6.12.41-082-erofs-simplify-tail-inline-pcluster-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
