Drivers: hv: Make the sysfs node size for the ring buffer dynamic (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8916,6 +8916,7 @@
 	patches.kernel.org/6.12.41-105-iio-hid-sensor-prox-Restore-lost-scale-assign.patch
 	patches.kernel.org/6.12.41-106-iio-hid-sensor-prox-Fix-incorrect-OFFSET-calc.patch
 	patches.kernel.org/6.12.41-107-ARM-9448-1-Use-an-absolute-path-to-unified.h-.patch
+	patches.kernel.org/6.12.41-108-Drivers-hv-Make-the-sysfs-node-size-for-the-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
