--- a/series.conf
+++ b/series.conf
@@ -8919,6 +8919,7 @@
 	patches.kernel.org/6.12.41-108-Drivers-hv-Make-the-sysfs-node-size-for-the-r.patch
 	patches.kernel.org/6.12.41-109-ALSA-hda-tegra-Add-Tegra264-support.patch
 	patches.kernel.org/6.12.41-110-ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
+	patches.kernel.org/6.12.41-111-drm-i915-dp-Fix-2.7-Gbps-DP_LINK_BW-value-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
