--- a/series.conf
+++ b/series.conf
@@ -8849,6 +8849,7 @@
 	patches.kernel.org/6.12.41-038-net-hns3-default-enable-tx-bounce-buffer-when.patch
 	patches.kernel.org/6.12.41-039-platform-x86-ideapad-laptop-Fix-FnLock-not-re.patch
 	patches.kernel.org/6.12.41-040-platform-x86-ideapad-laptop-Fix-kbd-backlight.patch
+	patches.kernel.org/6.12.41-041-drm-amdgpu-Reset-the-clear-flag-in-buddy-duri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
