--- a/series.conf
+++ b/series.conf
@@ -8862,6 +8862,7 @@
 	patches.kernel.org/6.12.41-051-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 	patches.kernel.org/6.12.41-052-ALSA-hda-realtek-Add-mute-LED-support-for-HP-.patch
 	patches.kernel.org/6.12.41-053-arm64-entry-Mask-DAIF-in-cpu_switch_to-call_o.patch
+	patches.kernel.org/6.12.41-054-dpaa2-eth-Fix-device-reference-count-leak-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
