--- a/series.conf
+++ b/series.conf
@@ -8828,6 +8828,7 @@
 	patches.kernel.org/6.12.41-017-staging-vchiq_arm-Make-vchiq_shutdown-never-f.patch
 	patches.kernel.org/6.12.41-018-xfrm-state-initialize-state_ptrs-earlier-in-x.patch
 	patches.kernel.org/6.12.41-019-xfrm-state-use-a-consistent-pcpu_id-in-xfrm_s.patch
+	patches.kernel.org/6.12.41-020-xfrm-Set-transport-header-to-fix-UDP-GRO-hand.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
