--- a/series.conf
+++ b/series.conf
@@ -8829,6 +8829,7 @@
 	patches.kernel.org/6.12.41-018-xfrm-state-initialize-state_ptrs-earlier-in-x.patch
 	patches.kernel.org/6.12.41-019-xfrm-state-use-a-consistent-pcpu_id-in-xfrm_s.patch
 	patches.kernel.org/6.12.41-020-xfrm-Set-transport-header-to-fix-UDP-GRO-hand.patch
+	patches.kernel.org/6.12.41-021-xfrm-interface-fix-use-after-free-after-chang.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
