--- a/series.conf
+++ b/series.conf
@@ -8885,6 +8885,7 @@
 	patches.kernel.org/6.12.41-074-jfs-reject-on-disk-inodes-of-an-unsupported-t.patch
 	patches.kernel.org/6.12.41-075-comedi-comedi_test-Fix-possible-deletion-of-u.patch
 	patches.kernel.org/6.12.41-076-crypto-powerpc-poly1305-add-depends-on-BROKEN.patch
+	patches.kernel.org/6.12.41-077-mtd-rawnand-qcom-Fix-last-codeword-read-in-qc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
