ARM: 9448/1: Use an absolute path to unified.h in KBUILD_AFLAGS (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8915,6 +8915,7 @@
 	patches.kernel.org/6.12.41-104-wifi-mt76-mt7925-adjust-rm-BSS-flow-to-preven.patch
 	patches.kernel.org/6.12.41-105-iio-hid-sensor-prox-Restore-lost-scale-assign.patch
 	patches.kernel.org/6.12.41-106-iio-hid-sensor-prox-Fix-incorrect-OFFSET-calc.patch
+	patches.kernel.org/6.12.41-107-ARM-9448-1-Use-an-absolute-path-to-unified.h-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
