--- a/series.conf
+++ b/series.conf
@@ -8906,6 +8906,7 @@
 	patches.kernel.org/6.12.41-095-ext4-fix-out-of-bounds-punch-offset.patch
 	patches.kernel.org/6.12.41-096-KVM-x86-drop-x86.h-include-from-cpuid.h.patch
 	patches.kernel.org/6.12.41-097-KVM-x86-Route-non-canonical-checks-in-emulato.patch
+	patches.kernel.org/6.12.41-098-KVM-x86-Add-X86EMUL_F_MSR-and-X86EMUL_F_DT_LO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
