--- a/series.conf
+++ b/series.conf
@@ -8815,6 +8815,7 @@
 	patches.kernel.org/6.12.41-004-virtio_ring-Fix-error-reporting-in-virtqueue_.patch
 	patches.kernel.org/6.12.41-005-regulator-core-fix-NULL-dereference-on-unbind.patch
 	patches.kernel.org/6.12.41-006-platform-x86-asus-nb-wmi-add-DMI-quirk-for-AS.patch
+	patches.kernel.org/6.12.41-007-RDMA-core-Rate-limit-GID-cache-warning-messag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
