--- a/series.conf
+++ b/series.conf
@@ -8904,6 +8904,7 @@
 	patches.kernel.org/6.12.41-093-ext4-fix-incorrect-punch-max_end.patch
 	patches.kernel.org/6.12.41-094-ext4-correct-the-error-handle-in-ext4_falloca.patch
 	patches.kernel.org/6.12.41-095-ext4-fix-out-of-bounds-punch-offset.patch
+	patches.kernel.org/6.12.41-096-KVM-x86-drop-x86.h-include-from-cpuid.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
