--- a/series.conf
+++ b/series.conf
@@ -8918,6 +8918,7 @@
 	patches.kernel.org/6.12.41-107-ARM-9448-1-Use-an-absolute-path-to-unified.h-.patch
 	patches.kernel.org/6.12.41-108-Drivers-hv-Make-the-sysfs-node-size-for-the-r.patch
 	patches.kernel.org/6.12.41-109-ALSA-hda-tegra-Add-Tegra264-support.patch
+	patches.kernel.org/6.12.41-110-ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
