platform/mellanox: mlxbf-pmc: Remove newline char from event name input (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8819,6 +8819,7 @@
 	patches.kernel.org/6.12.41-008-interconnect-qcom-sc7280-Add-missing-num_link.patch
 	patches.kernel.org/6.12.41-009-iio-adc-ad7949-use-spi_is_bpw_supported.patch
 	patches.kernel.org/6.12.41-010-regmap-fix-potential-memory-leak-of-regmap_bu.patch
+	patches.kernel.org/6.12.41-011-platform-mellanox-mlxbf-pmc-Remove-newline-ch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
